--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 tests/coverage*
 
 # Don't save phpunit under version control.
-#phpunit
+phpunit
 
 #-------------------------
 # Composer
@@ -125,6 +125,6 @@ nb-configuration.xml
 .history/
 
 /results/
-#/phpunit*.xml
-#/.phpunit.*.cache
+/phpunit*.xml
+/.phpunit.*.cache
 
