알림장 테스트

--- a/.env
+++ b/.env
@@ -163,3 +163,5 @@ security.regenerate = true
 #--------------------------------------------------------------------
 
 # curlrequest.shareOptions = true
+api.domain = 'https://api.kyowonwiz.com/fp';
+api.reqValidTokenUrl = '/api/user/reqValidToken.json';
