--- a/.env
+++ b/.env
@@ -163,5 +163,5 @@ security.regenerate = true
 #--------------------------------------------------------------------
 
 # curlrequest.shareOptions = true
-api.domain = 'https://api.kyowonwiz.com/fp';
+api.domain = 'http://localhost:8800/fp';
 api.reqValidTokenUrl = '/api/user/reqValidToken.json';
